[gd_scene load_steps=17 format=2]

[ext_resource path="res://TextEdit.gd" type="Script" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]

[sub_resource type="Theme" id=7]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Roboto_Mono/static/RobotoMono-Bold.ttf"

[sub_resource type="DynamicFont" id=1]
font_data = SubResource( 2 )

[sub_resource type="Environment" id=4]
background_mode = 4
glow_enabled = true
glow_levels/4 = true
glow_intensity = 6.57
glow_strength = 0.91
glow_bloom = 1.0
glow_high_quality = true

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.121569, 0.137255, 0.164706, 1 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Roboto_Mono/static/RobotoMono-Bold.ttf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Roboto_Mono/static/RobotoMono-Bold.ttf"

[sub_resource type="DynamicFont" id=11]
font_data = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.168627, 0.2, 0.243137, 1 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Roboto_Mono/static/RobotoMono-Bold.ttf"

[sub_resource type="DynamicFont" id=13]
font_data = SubResource( 12 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 28.0
margin_right = 4.0
theme = SubResource( 3 )
custom_colors/background_color = Color( 0.121569, 0.137255, 0.164706, 1 )
custom_colors/number_color = Color( 0.635294, 0.988235, 0.776471, 1 )
custom_fonts/font = SubResource( 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 8.37
script = ExtResource( 1 )

[node name="PopupMenu2" type="PopupMenu" parent="TextEdit"]
anchor_bottom = 0.021
margin_right = 44.0
margin_bottom = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
margin_right = 1025.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( -10, 0 )
theme = SubResource( 5 )
custom_styles/panel = SubResource( 6 )

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
resizable = true
access = 2

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
resizable = true
access = 2

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 35.0
margin_top = 1.0
margin_right = 144.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 88, 22 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "File"

[node name="MenuButton2" type="MenuButton" parent="."]
margin_left = 134.0
margin_right = 243.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 88, 22 )
focus_mode = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Edit"

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 259.0
margin_top = 149.0
margin_right = 807.0
margin_bottom = 446.0
custom_colors/title_color = Color( 0.560784, 0.396078, 0.827451, 1 )
custom_fonts/title_font = SubResource( 11 )
custom_styles/panel = SubResource( 14 )
window_title = "About"
resizable = true

[node name="Label" type="Label" parent="WindowDialog"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.411765, 0.713726, 0.862745, 1 )
custom_fonts/font = SubResource( 13 )
text = "This is a Code Edit for DeepX !!!!"

[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
